# react-native-zen-engine

./: .gitignore  CONTRIBUTING.md  README.md  package.json  react-native-zen-engine.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/java/com/zenengine/: ZenEngineModule.kt  ZenEnginePackage.kt
cpp/: react-native-zen-engine.cpp  react-native-zen-engine.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/zenengine/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: File.swift  Podfile
example/ios/ZenEngineExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/ZenEngineExample.xcodeproj/: project.pbxproj
example/ios/ZenEngineExample.xcodeproj/xcshareddata/xcschemes/: ZenEngineExample.xcscheme
example/ios/ZenEngineExample.xcworkspace/: contents.xcworkspacedata
example/ios/ZenEngineExampleTests/: ZenEngineExampleTests.m
example/src/: App.tsx  sampleContext.json  sampleDecision.json
ios/: ZenEngine.h  ZenEngine.mm
src/: NativeZenEngine.ts  index.tsx
zenffi/: Cargo.toml  build.rs  makefile
